# OpenTextRPG

./: .travis.yml  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  LICENSE  Makefile  Makefile.nx  README.md  main.cpp
Source/: Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  Game.h  Item.cpp  Item.h  Location.cpp  Location.h  Main.cpp  Player.cpp  Player.h
